# singer-playground

./: README.md
advanced/testing/: .gitignore  Dockerfile  Makefile
advanced/testing/config/: mysql_config.json  postgres_config.json
basics/01-spec-exploration/: README.md  pyproject.toml
basics/01-spec-exploration/src/spec_exploration/: __main__.py
basics/01-spec-exploration/src/spec_exploration/cli/: __init__.py
taps/database-tap/mysql/: .gitignore  Makefile
